package keijumt.design_pattern.pattern.observer

class ConcreteSubject : Subject() {

}