package keijumt.design_pattern.pattern.observer

interface Observer {
    fun update()
}